--- a/documentary/1-API/1.md
+++ b/documentary/1-API/1.md
@@ -1,4 +1,6 @@
 <!-- block-start -->
+<tr><td colspan="2"><md2html><h3>[`any()`](###): Accept all files and fields.</h3></md2html></td></tr>
+
 <tr><td>
 
 %EXAMPLE: example/any, ../src => @multipart/form-data%
@@ -7,7 +9,6 @@
 
 %FORK-js example/any%
 </td></tr>
-<tr><td colspan="2"><md2html>[`any()`](###): Accepts all files and fields.</md2html></td></tr>
 </table>
 
 %~%
